app/javascript/snap/styles/components/_search-results.scss
.search-container {
    padding-left: 0;
    padding-right: 0;
    overflow-x: hidden;

    .card {
        border: none;
        border-radius: 0;
        text-align: center;

        .card-top-container {
            position: relative;
            height: auto !important;
            overflow: hidden;
            z-index: 2;
        }

        .card-img-container {
            position: absolute;
            filter: blur(10px);
            transform: scale(1.1);
            height: 100%;
            img {
                height: 100%
            }
        }

        .card-img-overlay {
            padding: 40px 40px 50px 40px;
            height: auto;
            position: relative;

            .card-img-result {
                position: relative;
                z-index: 1;
                pointer-events: none;
                img {
                    width:100%;
                }
            }

            .card-title {
                position: relative;
                padding-top:30px;
                margin: 0 -15px;
                line-height: 35px;
                font-size: 30px;
                text-align: center;
                color: #FFFFFF;
            }
        }

        .card-body {
            padding: 25px;
            color: #282828;
            text-align: left;
            z-index: 2;
            background: #fff;
            .card-text {
                padding-bottom: 30px;
            }

            .card-info {
                display: flex;
                justify-content: center;
                margin-bottom: 45px;
            }

            .detail-table {
                width: 100%;

                .item-label {
                    line-height: 30px;
                    font-size: 17px;
                    letter-spacing: 0.01em;
                    color: #6E6E6E;
                    opacity: 0.8;
                    vertical-align: top;
                    width: 30%;
                }

                .item-info {
                    line-height: 18px;
                    padding-top: 6px;
                    font-size: 17px;
                    letter-spacing: 0.01em;
                    color: #282828;
                    vertical-align: top;
                }
            }

            .share-wrapper {
                margin-bottom: 60px;

                .btn-share-result {
                    width: 95px;
                    height: 45px;
                    border: 2px solid rgba(0, 0, 0, 0.12);
                    border-radius: 100px;
                    margin: 0 auto;

                    img {
                        position: relative;
                        left: 12px;
                        top: 8px;
                    }

                    .text-share {
                        line-height: 24px;
                        font-size: 16px;
                        color: #6E6E6E;
                        top: 8px;
                        left: 22px;
                        position: relative;
                    }
                }
            }

            .text-left {
                text-align: left;
            }

            .text-right {
                text-align: right;
            }
        }        

        .card-footer {
            background-color: #D4432A;
            color: #FFF;
            padding: 2rem;
            
            p {
                color: #FFF; 
                opacity: 0.8;
            }
        }
        
        .btn-circle {
            width: 70px;
            height: 70px;
            border-radius: 35px;
            font-size: 24px;
            line-height: 0.33;
            position: relative;
            top: -35px;
            left: 75vw;
            background-color: #000;
            color: #FFF;
            -webkit-appearance: none;
        }
    }

    .reset-experience {
        color: #D4432A;
        padding: 10px 0;
        font-weight: bold;
        font-size: 16px;
    }
}

.search-error-container {

    .error-container {
        padding: 60px 30px;
        height: 60vh;
        text-align: center;
    }
}

.notification {
    border-top: 2px solid rgb(255, 0, 0) !important;
    background-color: #000 !important;
    color: #fff !important;
    box-shadow: rgba(0, 0, 0, .9) 0px 0px 1px !important;
    text-align: center;
}

/* Slick sider customization for scale and animation*/

// Need position relative and a base z index
.slick-slide {
    position: relative;
    z-index: 6;
}
// Set center to high zindex
.slick-active {
    z-index: 999; // or any high #
    margin: 0 15px;
}
// Target slide after center to keep stacking
.slick-active + .slick-slide {
    z-index: 8;
}


.slick-list {
    padding: 0px 102px !important;
    margin: 0 -15px;
}

.slick-slide {
    margin: 50px 15px;
    img {
        opacity: 0.7;
    }
}

.slick-active img{
    -moz-transform:scale(1.13);
    -ms-transform:scale(1.13);
    -o-transform:scale(1.13);
    -webkit-transform:scale(1.13);
    transform:scale(1.13);
    opacity:1;
    transition: all .2s ease-in-out;
}

.cross-fade-leave {
  opacity: 1;
}
.cross-fade-leave.cross-fade-leave-active {
  opacity: 0;
  transition: opacity 1s ease-in;
}

.cross-fade-enter {
  opacity: 0;
}
.cross-fade-enter.cross-fade-enter-active {
  opacity: 1;
  transition: opacity 1s ease-in;
}

.cross-fade-height {
  transition: height .5s ease-in-out;
}

/* iPhone 6,7,8  */
@media only screen and (min-device-width: 320px) and (max-device-height: 667px) and (orientation : portrait) {
    
}

